view1 final commit

--- a/Client/Index.html
+++ b/Client/Index.html
@@ -10,9 +10,23 @@
 
 </head>
 <body>
-    <div>
+    <div align="left">
         <h1 style="font-family: 'Thasadith', sans-serif; text-align:center">The Voice Of The People Behind Second Amendment</h1>
         <div id="map"></div>
+    </div>
+
+    <div id="side-container" align="right">
+        <h3> bllllaaalalalla</h3>
+        <div id="vote-chart"> </div>
+        <div id="state-details">
+            <h3>Click a state</h3>
+            <p><span class='label'># of votes: </span></p>
+            <p><span class='label'># of polls:  </span></p>
+            <p><span class='label'>Displaying poll:  </span></p>
+            <p><span class='label'>Date conducted:  </span></p>
+            <p><span class='label'>% Dem:  </span></p>
+            <p><span class='label'>% GOP:  </span></p>
+        </div>
     </div>
     <script src="Scripts.js"></script>
 </body>
