view1 final commit

--- a/Client/Index.html
+++ b/Client/Index.html
@@ -6,17 +6,17 @@
     <title>Gun Control</title>
     <link href="https://fonts.googleapis.com/css?family=Thasadith" rel="stylesheet">
     <script src="mapdata.js"></script>
-    <script src="usmap.js"></script>
+    <script src="Scripts.js"></script>
 
+    <script src="usmap.js"></script>
 </head>
 <body>
-    <div align="left">
+    <div id="main-container">
         <h1 style="font-family: 'Thasadith', sans-serif; text-align:center">The Voice Of The People Behind Second Amendment</h1>
         <div id="map"></div>
-    </div>
 
-    <div id="side-container" align="right">
-        <h3> bllllaaalalalla</h3>
+    </div>
+    <div id="side-container" style="display:none;">
         <div id="vote-chart"> </div>
         <div id="state-details">
             <h3>Click a state</h3>
@@ -28,9 +28,9 @@
             <p><span class='label'>% GOP:  </span></p>
         </div>
     </div>
-    <script src="Scripts.js"></script>
+
 </body>
 </html>
-      
-    
+
+
 
