--- a/Client/Index.html
+++ b/Client/Index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>Gun Control</title>
-    <link href="https://fonts.googleapis.com/css?family=Thasadith" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Thasadith:400,700" rel="stylesheet">
     <script src="mapdata.js"></script>
     <script src="Scripts.js"></script>
 
@@ -16,7 +16,7 @@
         <div id="map"></div>
 
     </div>
-    <div id="side-container" style="display:none;">
+    <!--<div id="side-container">
         <div id="vote-chart"> </div>
         <div id="state-details">
             <h3>Click a state</h3>
@@ -27,7 +27,7 @@
             <p><span class='label'>% Dem:  </span></p>
             <p><span class='label'>% GOP:  </span></p>
         </div>
-    </div>
+    </div>-->
 
 </body>
 </html>
