--- a/Client/Index.html
+++ b/Client/Index.html
@@ -28,7 +28,7 @@
     </a>
 
     <div id="main-container">
-        <h1>Title For First View</h1>
+        <h1>Most Tweets In Each State Are <span id="green">Pro</span>/<span id="red">Against</span>/<span id="blue">Neutral</span></h1>
         <div id="map"></div>
 
         <a href=#View2>
@@ -36,21 +36,9 @@
         </a>
 
     </div>
-    <!--<div id="side-container">
-        <div id="vote-chart"> </div>
-        <div id="state-details">
-            <h3>Click a state</h3>
-            <p><span class='label'># of votes: </span></p>
-            <p><span class='label'># of polls:  </span></p>
-            <p><span class='label'>Displaying poll:  </span></p>
-            <p><span class='label'>Date conducted:  </span></p>
-            <p><span class='label'>% Dem:  </span></p>
-            <p><span class='label'>% GOP:  </span></p>
-        </div>
-    </div>-->
 
     <div id="View2">
-        <h1>Second View Title</h1>
+        <h1>Zoom In On Both Parties</h1>
         <div class="Bar">
             <h2><u>Democrates</u></h2>
             <h3 id="popu_democ">- Population: 1,100,360</h3>
@@ -70,7 +58,7 @@
 
     </div>
     <div id="View3">
-        <h1 class="view3Title">Third View Title</h1>
+        <h1 class="view3Title">Three Most Opinionated States- Opinion Rate</h1>
         <div class="Pie">
             <h2 id="pie1">First State</h2>
             <div id="chartdivPie1"></div>
