--- a/Client/Index.html
+++ b/Client/Index.html
@@ -41,14 +41,14 @@
         <h1>Zoom In On Both Parties</h1>
         <div class="Bar">
             <h2><u>Democrates</u></h2>
-            <h3 id="popu_democ">- Population: 1,100,360</h3>
-            <h3 id="prec_democ">- 90% against the law</h3>
+            <h3 id="popu_democ"></h3>
+            <h3 id="prec_democ"></h3>
             <div id="chartdivBar1"></div>
         </div>
         <div class="Bar">
             <h2><u>Republicans</u></h2>
-            <h3 id="popu_repub">- Population: 1,100,360</h3>
-            <h3 id="prec_repub">- 90% against the law</h3>
+            <h3 id="popu_repub"></h3>
+            <h3 id="prec_repub"></h3>
             <div id="chartdivBar2"></div>
         </div>
 
@@ -60,15 +60,15 @@
     <div id="View3">
         <h1 class="view3Title">Three Most Opinionated States- Opinion Rate</h1>
         <div class="Pie">
-            <h2 id="pie1">First State</h2>
+            <h2 id="pie1"></h2>
             <div id="chartdivPie1"></div>
         </div>
         <div class="Pie">
-            <h2 id="pie2">Second State</h2>
+            <h2 id="pie2"></h2>
             <div id="chartdivPie2"></div>
         </div>
         <div class="Pie">
-            <h2 id="pie3">Third State</h2>
+            <h2 id="pie3"></h2>
             <div id="chartdivPie3"></div>
         </div>
     </div>
